minor alignment fix

--- a/components/home_nav.module.css
+++ b/components/home_nav.module.css
@@ -1,6 +1,9 @@
 
 .container {
 	/*background: blue;*/
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
 }
 
 .list {
